# voice-keyboard-linux

./: Cargo.toml  LICENSE.txt  README.md  flake.nix  run.sh  shell.nix
src/: audio_input.rs  input_event.rs  main.rs  stt_client.rs  virtual_keyboard.rs
