[package]
name = "voice-keyboard"
version = "0.1.0"
edition = "2021"

[dependencies]
nix = { version = "0.27", features = ["ioctl", "fs", "user"] }
libc = "0.2"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
