[package]
name = "voice-keyboard"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
cpal = "0.15"
input-event-codes = "5.16"
libc = "0.2"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
nix = { version = "0.27", features = ["user", "fs", "ioctl"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
